fixed lang container overflow

--- a/Thecodecamp/myapp/static/lang.css
+++ b/Thecodecamp/myapp/static/lang.css
@@ -5,6 +5,7 @@ body {
     overflow: auto;
     margin: 0;
     padding: 2rem;
+    box-sizing: border-box;
 }
 
 @keyframes gradientAnimation {
@@ -19,7 +20,7 @@ body {
     flex-direction: column;
     border: 2px solid #fff;
     border-radius: 25px;
-    padding: 30px;
+    padding: 5%;
     background-color: rgba(0, 0, 0, 0.5);
     gap: 50px;
     width: 60%;
@@ -111,4 +112,14 @@ body {
     .container {
         width: 90%;
     }
+
+    .innerContainer {
+        justify-content: space-between;
+    }
+}
+
+
+.innerContainer {
+    flex-wrap: wrap;
+    gap: 20px;
 }
